# quadsolver

./: build.py  pyproject.toml
.github/workflows/: wheel.yml
quadprog/: __init__.py  linear-algebra.c  qr-update.c  quadprog.pyx  solve.QP.c
quadsolver/: __init__.py  solve.QP.c
tests/: test.py
